<resources>
    <string name="app_name">TechCafe</string>
    <string name="TechCafe">Tech Café</string>
    <string name="plash_moto">TextView</string>
    <string name="splash_moto">The only app programmer needs.</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Email address</string>
    <string name="create_an_account">Create an account</string>
    <string name="or">or</string>
    <string name="create_account">Create an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="set_up_your_account">Set up your account</string>
    <string name="enter_your_name">Your name</string>
    <string name="register_text">Register</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="homepage">HomePage</string>
    <string name="enter_account_information">Enter account information</string>
    <string name="sign_out">Sign Out</string>
    <string name="explore_topics">Explore Topics</string>
    <string name="stat_name">Statistics</string>
    <string name="bottom_stat">Source: U.S. Bureau of Labor Statistics</string>
    <string name="sd_skills">Skills and Tech</string>
    <string name="sd_topic_2">Topic</string>
    <string name="sd_topic_3">Topic</string>
    <string name="sd_topic_4">Topic</string>
    <string name="sd_topic_5">Topic</string>
    <string name="sd_topic_6">Topic</string>
    <string name="sd_topic_7">Topic</string>
    <string name="sd_interview">Interview Practice</string>
    <string name="sd_topic_1">Topic</string>
    <string name="sd_topic_8">Topic</string>
    <string name="sd_topic_9">Topic</string>
    <string name="sd_topic_24">Topic</string>
    <string name="sd_topic_25">Topic</string>
    <string name="sd_skill1">Software Development</string>
    <string name="sd_lang_skill">Coding Languages </string>
    <string name="sd_lang_1">\u2022 JavaScript</string>
    <string name="sd_lang_2">\u2022 Java</string>
    <string name="sd_lang_3">\u2022 Python</string>
    <string name="sd_lang4">\u2022 PHP</string>
    <string name="sd_lang5">\u2022 C#</string>
    <string name="sd_lang6">\u2022 C++</string>
    <string name="sd_lang_res">According To <a href="https://distantjob.com/blog/programming-languages-rank/"> DistnatJob.com</a> </string>
    <string name="sd_database_skill">Algorithms</string>
    <string name="sd_database_1">Sorting Algorithms </string>
    <string name="sd_database_2">   \u2022 Merge Sort</string>
    <string name="sd_database_3">   \u2022 Bubble Sort</string>
    <string name="sd_database_4">   \u2022 Quick Sort</string>
    <string name="sd_database_5">   \u2022 Bucket Sort</string>
    <string name="sd_database_6">   \u2022 Heap Sort</string>
    <string name="sd_database_7">Searching Algorthims</string>
    <string name="sd_database_8">   \u2022 DFS</string>
    <string name="sd_database_9">   \u2022 BFS</string>
    <string name="sd_database_10">Hashing</string>
    <string name="sd_database_11">Dynamic Programing</string>
    <string name="sd_database_res">According To <a href="https://u.osu.edu/cstutorials/2016/11/21/7-algorithms-and-data-structures-every-programmer-must-know/"> OSU.edu</a> </string>
    <string name="sd_datastruc_skill">Data Types and Structures</string>
    <string name="sd_datastruc_1">Common Data Types </string>
    <string name="sd_datastruc_2">\u2022 Int</string>
    <string name="sd_datastruc_3">\u2022 Double/Float</string>
    <string name="sd_datastruc_4">\u2022 Bool</string>
    <string name="sd_datastruc_5">\u2022 Char/String</string>
    <string name="sd_datastruc_6">\u2022 Enum</string>
    <string name="sd_datastruc_7">Structures</string>
    <string name="sd_datastruc_8">\u2022 Arrays</string>
    <string name="sd_datastruc_9">\u2022 Linked Lists</string>
    <string name="sd_datastruc_10">\u2022 Stacks</string>
    <string name="sd_datastruc_11">\u2022 Queues</string>
    <string name="sd_datastruc_12">\u2022 Hash Tables</string>
    <string name="sd_datastruc_res">According to <a href="https://towardsdatascience.com/8-common-data-structures-every-programmer-must-know-171acf6a1a42?gi=34ac498196d6
    ">tds</a> and <a href="https://amplitude.com/blog/data-types">Amplitude</a></string>
    <string name="sd_algo_skill">Database</string>
    <string name="sd_algo_1">Oracle</string>
    <string name="sd_algo_2">MySQL</string>
    <string name="sd_algo_3">SQLServer</string>
    <string name="sd_algo_4">Microsoft Access</string>
    <string name="sd_algo_5">MongoDB</string>
    <string name="sd_algo_res">According to <a href="https://www.developer.com/database/best-database-software/">developer.com</a></string>
    <string name="sd_testing_skill">Testing</string>
    <string name="sd_testing_1">Selenium for Java</string>
    <string name="sd_testing_2">Mocha for Javascript</string>
    <string name="sd_testing_3">Jasmine for Javascript</string>
    <string name="cs_skill1">Cyber Security</string>
    <string name="cs_coding_skill">Coding Languages</string>
    <string name="cs_lang_1">Python</string>
    <string name="cs_lang_2">C++</string>
    <string name="cs_lang_3">C</string>
    <string name="cs_lang_4">GO</string>
    <string name="cs_lang_5">JavaScript</string>
    <string name="cs_lang_6">Java</string>
    <string name="cs_lang_7">PowerShell</string>
    <string name="cs_lang_res">According to <a href="https://flatironschool.com/blog/best-programming-languages-cyber-security/">flatironschol.com</a> </string>
    <string name="cs_skill2">Cyber Security</string>
    <string name="cs_network_skill">Networking</string>
    <string name="cs_network_1">Clinets and Servers</string>
    <string name="cs_network_2">IP Adresses</string>
    <string name="cs_network_3">Network Hubs and Switches</string>
    <string name="cs_network_4">Routers and Firewalls</string>
    <string name="cs_network_res">According to <a href="https://commotionwireless.net/docs/cck/networking/learn-networking-basics/#:~:text=Networks%20are%20made%20up%20of,in%20a%20community%20or%20neighborhood.">commotionwireless.com</a></string>
    <string name="cs_skill3">Cyber Security</string>
    <string name="cs_system_skill">Encryption</string>
    <string name="cs_system_1">Cryptographic Key Systems</string>
    <string name="cs_system_2">\u2022 Symmetric Key Systems</string>
    <string name="cs_system_3">\u2022 Asymmetric Key Systems</string>
    <string name="cs_system_4">Encryption Algorithms</string>
    <string name="cs_system_5">\u2022 Triple Data Encryption Standard (DES)</string>
    <string name="cs_system_6">\u2022 Advanced Encryption Standard (AES)</string>
    <string name="cs_system_7">\u2022 RSA Security</string>
    <string name="cs_system_8">\u2022 Blowfish</string>
    <string name="cs_system_9">\u2022 Twofish</string>
    <string name="cs_system_res">According to <a href="https://blog.storagecraft.com/5-common-encryption-algorithms/">storagecraft.com</a></string>
    <string name="cs_skill4">Cyber Security</string>
    <string name="cs_security_skill">Security</string>
    <string name="cs_security_1">Malware</string>
    <string name="cs_security_2">Emotet</string>
    <string name="cs_security_3">Denial Of Service</string>
    <string name="cs_security_4">Denial of Service (DDoS)</string>
    <string name="cs_security_5">Man in the Middle (MITM)</string>
    <string name="cs_security_6">Phishing</string>
    <string name="cs_security_7">SQL injections</string>
    <string name="cs_security_8">Password Attacks</string>
    <string name="cs_security_res">According to <a href="https://onlinedegrees.und.edu/blog/types-of-cyber-security-threats/">onlinedegrees.edu</a></string>
    <string name="uix_skill1">UI/UX</string>
    <string name="uix_lang_skill">Coding Languages</string>
    <string name="uix_lang_1">JavaScript</string>
    <string name="uix_lang_2">Hyper Text Markup Language (HTML)</string>
    <string name="sdscreeningq1">"Tell me about yourself."</string>
    <string name="sdscreeningq2">"Why should we hire you for this position?"</string>
    <string name="sdscreeningq3">"What projects are you currently working on?"</string>
    <string name="sdscreeningq4">"Where do you see yourself in five years?"</string>
    <string name="sdscreeningq5">"What programming languages are you proficient in?"</string>
    <string name="sdscreeningq6">"Why are you interested in this position? Why do you want this job?"</string>
    <string name="sdscreeningq7">"Explain how your background/experiences is relevant to this position."</string>
    <string name="sdscreeningq8">"What do you know about [company name]?"</string>
    <string name="sdjsq1">"What is JavaScript?"</string>
    <string name="sdjsq2">"What are the JavaScript Data Types?"</string>
    <string name="sdjsq3">"Describe the difference between undeclared and undefined variables."</string>
    <string name="sdjsq4">"Describe what ’dynamic typing‘ means for JavaScript."</string>
    <string name="sdjsq5">"Explain JavaScript callback functions."</string>
    <string name="sdjsq6">"What values are falsy?"</string>
    <string name="sdjsq7">"What is the difference between == and ===?"</string>
    <string name="sdjsq8">"How do you explain closures in JavaScript? When are they used?"</string>
    <string name="sdhead">Screening Questions</string>
    <string name="sdsubhead">Phone interviews are typically called screenings because the employers are screening candidates. These interviews are short, usually less than 30 minutes and may be as short as 10 minutes. The goal is to get an invitation to continue through the interview process.</string>
    <string name="sdjshead">"JavaScript"</string>
    <string name="sdjssubhead">"JavaScript, often abbreviated JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS. Interviewers may ask technical questions if the job requires you to know this skill."</string>
    <string name="csscreeningq1">"Tell me about yourself."</string>
    <string name="csscreeningq2">"Why should we hire you for this position?"</string>
    <string name="csscreeningq3">"Why do you want to work here?"</string>
    <string name="csscreeningq4">"Where do you see yourself in five years?"</string>
    <string name="csscreeningq5">"How are your skills a match for this job?"</string>
    <string name="csscreeningq6">"Why are you interested in this position? Why do you want this job?"</string>
    <string name="csscreeningq7">"Explain how your background/experiences is relevant to this position."</string>
    <string name="csscreeningq8">"What do you know about [company name]?"</string>
    <string name="cshead">Screening Questions</string>
    <string name="cssubhead">Phone interviews are typically called screenings because the employers are screening candidates. These interviews are short, usually less than 30 minutes and may be as short as 10 minutes. The goal is to get an invitation to continue through the interview process.</string>
    <string name="uix_name">UI/UX</string>
    <string name="uix_online_free">Online Free</string>
    <string name="uiuxFree1">UI UX Bookclub on <a href="https://memorisely-community.slack.com/">Slack</a></string>
    <string name="uiuxFree2">Learn UX Fundamentals at <a href="https://www.thegymnasium.com/courses/GYM/103/0/about">The Gymnasium</a></string>
    <string name="uiuxFree3">DesignTalk Free Events and Webinars by <a href="https://www.invisionapp.com/events">InVision</a></string>
    <string name="uiuxFree4">Caltech Introduction to User Experience Design on <a href="https://www.coursera.org/learn/user-experience-design">CourseEra</a></string>
    <string name="uiuxFree5">Figma Tutorials on their <a href="https://www.youtube.com/c/Figmadesign/videos"> YouTube account</a></string>
    <string name="uiuxFree6">FreeCodeCamp <a href="https://www.freecodecamp.org/news/tag/ui-design/"> UI Tag</a></string>
</resources>