<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:textAlignment="center"
    tools:context=".CSScreening">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="390dp"
        android:layout_height="121dp"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="177dp"
        android:background="@drawable/field_info_block"
        android:fontFamily="@font/avenir_normal"
        android:text="@string/cssubhead"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:layout_width="384dp"
        android:layout_height="76dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/avenir_heavy"
        android:gravity="center"
        android:text="@string/cshead"
        android:textColor="#E3A55E"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="467dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/field_info_block"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="379dp"
            android:layout_height="39dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/csscreeningq1"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="381dp"
            android:layout_height="42dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/csscreeningq2"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="383dp"
            android:layout_height="41dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/csscreeningq3"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="386dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/csscreeningq4"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="381dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/csscreeningq5"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="384dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/csscreeningq6"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="388dp"
            android:layout_height="47dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/csscreeningq7"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="386dp"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/csscreeningq8"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>