<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".SDScreening"
android:background="@color/white">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="366dp"
        android:layout_height="97dp"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="177dp"
        android:fontFamily="@font/avenir_normal"
        android:text="@string/sdsubhead"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/field_info_block"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

<TextView
    android:layout_width="384dp"
    android:layout_height="76dp"
    android:layout_marginStart="176dp"
    android:layout_marginEnd="177dp"
    android:fontFamily="@font/avenir_heavy"
    android:text="@string/sdhead"
    android:textColor="#E3A55E"
    android:textSize="25sp"
    android:gravity="center"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.516"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.03" />

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="462dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/field_info_block"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.125">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="379dp"
            android:layout_height="39dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/sdscreeningq1"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="381dp"
            android:layout_height="42dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/sdscreeningq2"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="383dp"
            android:layout_height="41dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/sdscreeningq3"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="386dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/sdscreeningq4"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="381dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/sdscreeningq5"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="384dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/sdscreeningq6"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="388dp"
            android:layout_height="47dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/sdscreeningq7"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="386dp"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/sdscreeningq8"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>