<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UIX_Resource_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-54dp">

        <TextView
            android:id="@+id/uix_resource_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/avenir_heavy"
            android:text="@string/uix_name"
            android:textAlignment="center"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="371dp"
            android:layout_height="529dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/topics_block"
            android:orientation="vertical">

            <TextView
                android:id="@+id/uix_online_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/avenir_heavy"
                android:paddingLeft="10dp"
                android:text="@string/uix_online_free"
                android:textAlignment="center"
                android:textColor="@color/orangeish"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/uix_online_free_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/avenir_normal"
                android:text="@string/uiuxFree1"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/uix_online_free_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/avenir_normal"
                android:text="@string/uiuxFree2"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/uix_online_free_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/avenir_normal"
                android:text="@string/uiuxFree3"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/uix_online_free_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/avenir_normal"
                android:text="@string/uiuxFree4"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/uix_online_free_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/avenir_normal"
                android:text="@string/uiuxFree5"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/uix_online_free_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/avenir_normal"
                android:text="@string/uiuxFree6"
                android:textAlignment="textStart"
                android:textSize="20sp" />


        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>